--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ body {
 </div>
 
 <div class="main">
-  <h2>Sidebar Dropdown</h2>
-  <p>Click on the dropdown button to open the dropdown menu inside the side navigation.</p>
-  <p>This sidebar is of full height (100%) and always shown.</p>
-  <p>Some random text..</p>
+  <h2>2P COnstructions</h2>
+  <p>To build you dream home</p>
+  <p>We are equiped with the greate engineers and technologies</p>
+  <p>We design, build and deliver your home on time</p>
 </div>
 
 <script>
