--- a/index.html
+++ b/index.html
@@ -1,121 +1,240 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
+
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {
-  font-family: "Lato", sans-serif;
-}
 
-/* Fixed sidenav, full height */
-.sidenav {
-  height: 100%;
-  width: 200px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
+	<meta charset="utf-8">
+	<!-- <base href="/"> -->
 
-/* Style the sidenav links and the dropdown button */
-.sidenav a, .dropdown-btn {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  color: #818181;
-  display: block;
-  border: none;
-  background: none;
-  width: 100%;
-  text-align: left;
-  cursor: pointer;
-  outline: none;
-}
+	<title>OptimizedHTML 4</title>
+	<meta name="description" content="">
 
-/* On mouse-over */
-.sidenav a:hover, .dropdown-btn:hover {
-  color: #f1f1f1;
-}
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	
+	<!-- Template Basic Images Start -->
+	<meta property="og:image" content="path/to/image.jpg">
+	<link rel="icon" href="img/favicon/favicon.ico">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+	<!-- Template Basic Images End -->
+	
+	<!-- Custom Browsers Color Start -->
+	<meta name="theme-color" content="#000">
+	<!-- Custom Browsers Color End -->
+	<link rel="stylesheet" href="css/main.min.css">
 
-/* Main content */
-.main {
-  margin-left: 200px; /* Same as the width of the sidenav */
-  font-size: 20px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-/* Add an active class to the active dropdown button */
-.active {
-  background-color: green;
-  color: white;
-}
-
-/* Dropdown container (hidden by default). Optional: add a lighter background color and some left padding to change the design of the dropdown content */
-.dropdown-container {
-  display: none;
-  background-color: #262626;
-  padding-left: 8px;
-}
-
-/* Optional: Style the caret down icon */
-.fa-caret-down {
-  float: right;
-  padding-right: 8px;
-}
-
-/* Some media queries for responsiveness */
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-</style>
 </head>
+
 <body>
-
-<div class="sidenav">
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
-  <button class="dropdown-btn">Dropdown 
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-container">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-  <a href="#contact">Search</a>
-</div>
-
-<div class="main">
-  <h2>2P COnstructions</h2>
-  <p>To build you dream home</p>
-  <p>We are equiped with the greate engineers and technologies</p>
-  <p>We design, build and deliver your home on time</p>
-</div>
-
-<script>
-/* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-var dropdown = document.getElementsByClassName("dropdown-btn");
-var i;
-
-for (i = 0; i < dropdown.length; i++) {
-  dropdown[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var dropdownContent = this.nextElementSibling;
-    if (dropdownContent.style.display === "block") {
-      dropdownContent.style.display = "none";
-    } else {
-      dropdownContent.style.display = "block";
-    }
-  });
-}
-</script>
-
+	<div class="wrapper">
+		<div class="header">
+			<div class="header__left">
+				<a href="/">
+					<img src="img/logo.png" alt="logo">
+				</a>
+				<h1 class="text-center">GANGLAND <br> CONSTRUCTION</h1>
+			</div>
+			<div class="header__right">
+				<img src="img/social/call.webp" alt="call">
+				<a href="tel:9402591290">
+					<p>9402591290</p>
+				</a>
+				<img src="img/social/mail.webp" alt="mail">
+				<a href="mailto:nvn@company.in">
+					<p>nvn@company.in</p>
+				</a>
+				<a href="https://facebook.com">
+					<img src="img/social/facebook.webp" alt="facebook">
+				</a>
+				<a href="https://instagram.com">
+					<img src="img/social/instagram.webp" alt="instagram">
+				</a>
+				<a href="https://twitter.com">
+					<img src="img/social/twitter.webp" alt="twitter">
+				</a>
+			</div>
+		</div>
+		<div class="face">
+			<div class="face__menu">
+					<div class="burger-menu"> <!-- Burger Menu Start -->
+						<!-- Этот чекбокс даст нам поведение переключателя, он будет скрыт, но работать -->
+						<input id="toggle" type="checkbox">						
+						<!-- ВАЖНО: любой элемент, который мы хотим модифицировать при изменении состояния чекбокса, является «братским» элементом для чекбокса -->						
+						<!-- Эта метка привязана к чекбоксу и будет содержать переключение «кнопок» -->
+						<label class="toggle-container" for="toggle">
+						<!-- Если меню открыто, то здесь будет иконка «X», в противном случае просто иконка гамбургера -->
+						<span class="button button-toggle"></span>
+						</label>
+						<!-- Навигация -->
+						<nav class="nav">
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">HOME</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">ABOUT</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">SERVICES</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">PROJECTS</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">CAREER</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">CONTACT</a>
+						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">LOG IN</a>
+						</nav>
+						<!-- Просто фиктивное содержимое, как в анимированном gif -->
+					</div> <!-- Burger Menu End -->
+				<ul>
+					<a href="/"><li>HOME</li></a>
+					<a href="/"><li>ABOUT</li></a>
+					<a href="/"><li>SERVICES</li></a>
+					<a href="/"><li>PROJECTS</li></a>
+					<a href="/"><li>CAREER</li></a>
+					<a href="/"><li>CONTACT</li></a>
+					<a href="/"><li>LOG IN</li></a>
+				</ul>
+			</div>
+			<div class="face__content">
+				<div class="face__content--left">
+					<img src="img/face.webp" alt="face">
+				</div>
+				<div class="face__content--right">
+					<form action="message">
+						<p>GET A QUOTE</p>
+						<input type="text" placeholder="NAME">
+						<input type="email" placeholder="EMAIL">
+						<input type="tel" placeholder="PHONE">
+						<textarea name="message" placeholder="MESSAGE"></textarea>
+						<button>SEND</button>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div class="projects">
+			<h2 class="text-center">ONGOING PROJECTS</h2>
+			<div class="projects__content">
+				<div class="projects__content--left">
+					<div class="projects__content--left--border"></div>
+					<div class="projects__content--left--image">
+						<img src="img/projects__left.webp" alt="projects__left.webp">
+					</div>
+					<div class="projects__content--left--text">
+						<a href="/"><h3>SMART HOMES</h3></a>
+						<hr>
+						<p>To believe in sustainable development and to shift sustainable energy has become imperative.</p>
+						<button>KNOW MORE</button>
+					</div>
+				</div>
+				<div class="projects__content--right">
+					<div class="projects__content--right--border"></div>
+					<div class="projects__content--right--image">
+						<img src="img/projects__right.webp" alt="projects__right.webp">
+					</div>
+					<div class="projects__content--right--text">
+						<a href="/"><h3>SMART HOMES</h3></a>
+						<hr>
+						<p>To believe in sustainable development and to shift sustainable energy has become imperative.</p>
+						<button>KNOW MORE</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="services">
+			<div class="first">
+				<div class="first__text">
+					<h2>Our Services</h2>
+					<hr>
+					<p>
+						We have an international experienced O&M division, which takes preventive and corrective maintenance services for solar plants across the globe. Our team operates and maintains solar power plants, offers monthly reporting on generation and activities, provides project commissioning expertise along with developing mechanism to retrieve and manage
+					</p>
+				</div>
+				<div class="first__image"></div>
+			</div>
+			<div class="second">
+				<img src="img/melissa-askew-642461-unsplash.webp" alt="melissa-askew-642461-unsplash.webp">
+				<div class="second__text">
+					<a href="/">
+						<h4>Solar Power Project</h4>
+					</a>
+					<hr>
+					<p>
+						Conventional energy is finite. To light up tomorrow’s world you need imaginative, innovative solutions.
+					</p>
+					<button>KNOW MORE</button>
+				</div>
+			</div>
+			<div class="third">
+				<div class="third__left">
+					<img src="img/freddie-marriage-40229-unsplash.webp" alt="freddie-marriage-40229-unsplash.webp">
+					<div class="third__left--text">
+						<a href="/">
+							<h5>Building Construction</h5>
+						</a>
+						<hr>
+						<p>
+							Meera Enterprises is the leading infrastructure and construction company in Rajasthan, India.
+						</p>
+						<button>KNOW MORE</button>
+					</div>
+				</div>
+				<div class="third__right">
+					<img src="img/edouard-ki-270914-unsplash.webp" alt="edouard-ki-270914-unsplash.webp">
+					<div class="third__right--text">
+						<a href="/">
+							<h5>Building Construction</h5>
+						</a>
+						<hr>
+						<p>
+							Meera Enterprises is the leading infrastructure and construction company in Rajasthan, India.
+						</p>
+						<button>KNOW MORE</button>
+					</div>
+				</div>
+			</div>
+			<h2 class="services__bottom--h2">OUR CLIENTS</h2>
+			<p class="services__bottom--p">
+				Always serve with honesty, integrity and transparency. Always, first understand your business needs and objectives.
+			</p>
+			<div class="slider">
+				<img src="img/slider/Layer_28.webp" alt="Layer_28.webp">
+				<img src="img/slider/Layer_29.webp" alt="Layer_29.webp">
+				<img src="img/slider/Layer_30.webp" alt="Layer_30.webp">
+				<img src="img/slider/Layer_31.webp" alt="Layer_31.webp">
+				<img src="img/slider/Layer_32.webp" alt="Layer_32.webp">
+			</div>
+		</div>
+		<div class="contact">
+			<h3>
+				Have any questions about our work?
+			</h3>
+			<button>CONTACT</button>
+		</div>
+		<footer class="footer">
+			<div class="footer__menu">
+				<ul>
+					<a href="/"><li>HOME</li></a>
+					<a href="/"><li>ABOUT</li></a>
+					<a href="/"><li>SERVICES</li></a>
+					<a href="/"><li>PROJECTS</li></a>
+					<a href="/"><li>CAREER</li></a>
+					<a href="/"><li>CONTACT</li></a>
+				</ul>
+			</div>
+			<div class="footer__icon">
+				<a href="/">
+					<img src="img/socialFooter/facebook.webp" alt="facebook.webp">
+				</a>
+				<a href="/">
+					<img src="img/socialFooter/instagram.webp" alt="instagram.webp">
+				</a>
+				<a href="/">
+					<img src="img/socialFooter/twitter.webp" alt="twitter.webp">
+				</a>
+				<a href="/">
+					<img src="img/socialFooter/linkedin.webp" alt="linkedin.webp">
+				</a>
+			</div>
+			<p class="footer__location">
+				BC Knowledge Park, Suddagunte Palya, Bengaluru, Karnataka 560029
+			</p>
+			<hr>
+			<p class="footer__copyright">
+				© 2018 GANGLAND CONSTRUCTIONS ALL RIGHTS RESERVED
+			</p>
+		</footer>
+	</div>
 </body>
-</html> 
+</html>
