--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>2P Constructions</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	
-	<!-- Template Basic Images Start -->
+	<!-- Basic Images Start -->
 	<meta property="og:image" content="path/to/image.jpg">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<!-- Template Basic Images End -->
+	<!-- Basic Images End -->
 	
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
@@ -32,16 +32,16 @@
 				<a href="/">
 					<img src="img/logo.png" alt="logo">
 				</a>
-				<h1 class="text-center">GANGLAND <br> CONSTRUCTION</h1>
+				<h1 class="text-center">2P <br> CONSTRUCTION</h1>
 			</div>
 			<div class="header__right">
 				<img src="img/social/call.webp" alt="call">
 				<a href="tel:9402591290">
-					<p>9402591290</p>
+					<p>6381994313</p>
 				</a>
 				<img src="img/social/mail.webp" alt="mail">
 				<a href="mailto:nvn@company.in">
-					<p>nvn@company.in</p>
+					<p>2pconstructions@gmail.com</p>
 				</a>
 				<a href="https://facebook.com">
 					<img src="img/social/facebook.webp" alt="facebook">
@@ -73,7 +73,7 @@
 						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">PROJECTS</a>
 						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">CAREER</a>
 						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">CONTACT</a>
-						<a rel="nofollow" rel="noreferrer" class="nav-item" href="">LOG IN</a>
+						<!--<a rel="nofollow" rel="noreferrer" class="nav-item" href="">LOG IN</a> -->
 						</nav>
 						<!-- Просто фиктивное содержимое, как в анимированном gif -->
 					</div> <!-- Burger Menu End -->
@@ -188,13 +188,14 @@
 			<p class="services__bottom--p">
 				Always serve with honesty, integrity and transparency. Always, first understand your business needs and objectives.
 			</p>
+			<!--
 			<div class="slider">
 				<img src="img/slider/Layer_28.webp" alt="Layer_28.webp">
 				<img src="img/slider/Layer_29.webp" alt="Layer_29.webp">
 				<img src="img/slider/Layer_30.webp" alt="Layer_30.webp">
 				<img src="img/slider/Layer_31.webp" alt="Layer_31.webp">
 				<img src="img/slider/Layer_32.webp" alt="Layer_32.webp">
-			</div>
+			</div>  -->
 		</div>
 		<div class="contact">
 			<h3>
@@ -228,11 +229,11 @@
 				</a>
 			</div>
 			<p class="footer__location">
-				BC Knowledge Park, Suddagunte Palya, Bengaluru, Karnataka 560029
+				We are working in all over Tamil Nadu
 			</p>
 			<hr>
 			<p class="footer__copyright">
-				© 2018 GANGLAND CONSTRUCTIONS ALL RIGHTS RESERVED
+				© 2022 2P CONSTRUCTIONS ALL RIGHTS RESERVED
 			</p>
 		</footer>
 	</div>
